--- a/css/styles.css
+++ b/css/styles.css
@@ -55,10 +55,10 @@ button {
   cursor: pointer;
   border: none;
 }
-.section {
+/* .section {
   padding-top: 120px;
   padding-bottom: 120px;
-}
+} */
 
 .visually-hidden {
   position: absolute;
@@ -85,12 +85,10 @@ button {
   padding: 0 15px;
   margin: 0 auto;
 }
-
 .section {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-
 /*-------------------------------------------------------------header--------------------------------------------------------------*/
 
 /* .header {
@@ -601,6 +599,9 @@ button {
     letter-spacing: 0.02em;
     color: #2e2f42;
   }
+  .current {
+    color: #404bbf;
+  }
   .mob-menu-nav {
     display: flex;
   }
@@ -632,7 +633,7 @@ button {
   }
   .mob-soc-list {
     display: flex;
-    gap: 56px;
+    gap: 30px;
   }
   .mob-soc-item {
     width: 40px;
@@ -673,7 +674,6 @@ button {
     margin-bottom: 72px;
   }
   .footer-soc-cont {
-    display: flex;
   }
 
   /*-------------------------hero----------------------------------*/
@@ -687,12 +687,12 @@ button {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1440px;
-    height: 600px;
+    max-width: 428px;
+    height: 432px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 188px;
-    padding-bottom: 188px;
+    padding-top: 112px;
+    padding-bottom: 112px;
     text-align: center;
   }
 
@@ -968,6 +968,7 @@ button {
   }
 
   .footer-bottom {
+    margin-bottom: 72px;
   }
 
   .footer-soc-list {
@@ -985,7 +986,6 @@ button {
     color: #ffffff;
     margin-bottom: 16px;
     text-align: center;
-    margin-top: 72px;
   }
   .footer-soc-item {
     width: 40px;
@@ -1015,8 +1015,6 @@ button {
 
   .footer-soc {
     margin-bottom: 72px;
-  }
-  .footer-soc-cont {
   }
 
   .footer-forms {
@@ -1306,11 +1304,15 @@ button {
     .container {
       width: 768px;
     }
+    .section {
+      padding-bottom: 96px;
+      padding-top: 96x;
+    }
   }
   .header {
     background: var(--color-white, #ffffff);
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
 
   .header-logo-web {
@@ -1416,7 +1418,7 @@ button {
     letter-spacing: 0.02em;
     color: var(--color-grey, #2e2f42);
     transition: color var(--transition);
-    padding: 45px 0px;
+    padding: 38px 0px;
   }
   .studio::after {
     position: absolute;
@@ -1488,12 +1490,12 @@ button {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1440px;
-    height: 600px;
+    max-width: 768px;
+    height: 436px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 188px;
-    padding-bottom: 188px;
+    padding-top: 112px;
+
     text-align: center;
   }
 
@@ -1512,7 +1514,7 @@ button {
   .hero-title {
     font-weight: 700;
     font-size: 56px;
-    line-height: 1.7;
+    line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
@@ -1628,10 +1630,10 @@ button {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 72px 16px;
+    gap: 72px 24px;
   }
   .customers-item {
-    width: calc((100% - 24px) / 4);
+    width: 168px;
     height: 88px;
   }
 
@@ -1834,8 +1836,8 @@ button {
   }
 
   .footer-soc {
-    margin-bottom: 72px;
   }
+
   .footer-soc-cont {
     display: flex;
   }
@@ -1851,15 +1853,15 @@ button {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #ffffff;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
   }
   .footer-email {
-    width: 264px;
+    width: 100%;
     height: 40px;
     outline: transparent;
     border: 1px solid #ffffff;
     border-radius: 4px;
-    padding-left: 16px;
+
     font-weight: 400;
     font-size: 12px;
     margin-bottom: 16px;
@@ -2118,44 +2120,13 @@ button {
     position: absolute;
   }
 }
-
-/* ----------------------------------not---------------------------------------------*/
-@media screen and (max-width: 1157px) {
-  .footer-soc-cont {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 72px 24px;
-    max-width: 550px;
-  }
-  .team-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 64px 24px;
-    justify-content: center;
-  }
-  .features-icon {
-    display: none;
-  }
-  .features {
-    flex-basis: calc((100% - 24px) / 2);
-  }
-  .features-list {
-    display: flex;
-    gap: 72px 24px;
-    flex-wrap: wrap;
-  }
-  .examples-section {
-    display: none;
-  }
-}
-
 /* -----------------------------DESKTOP--------------------------------------*/
 @media screen and (min-width: 1158px) {
   @media screen and (min-width: 1158px) {
     .container {
       width: 1158px;
     }
+
     .header-list {
       align-items: center;
       display: flex;
@@ -2168,7 +2139,7 @@ button {
       letter-spacing: 0.02em;
       color: var(--color-grey, #2e2f42);
       transition: color var(--transition);
-      padding: 35px 0px;
+      padding: 27px 0px;
     }
     /* -------------------------examples--------------------------------*/
     .examples {
@@ -2246,5 +2217,41 @@ button {
   }
   .team-list {
     gap: 24px;
+  }
+
+  .footer-soc-cont {
+  }
+}
+/* ----------------------------------not---------------------------------------------*/
+@media screen and (max-width: 1157px) {
+  .section {
+    padding-bottom: 96px;
+    padding-top: 96x;
+  }
+
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 64px 24px;
+    justify-content: center;
+  }
+  .features-icon {
+    display: none;
+  }
+  .features {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+  .features-list {
+    display: flex;
+    gap: 72px 24px;
+    flex-wrap: wrap;
+  }
+  .examples-section {
+    display: none;
+  }
+  .footer-soc-cont {
+    flex-wrap: wrap;
+    gap: 72px 24px;
+    max-width: 550px;
   }
 }
